--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
