--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "eslint": "^8.16.0",
     "node-sass": "^7.0.1",
     "prop-types": "^15.7.2",
