--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.0",
-    "typescript": "3.8.3",
+    "typescript": "^3.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,8 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "3.8.3"
   }
 }
